# CaptureRegionReader

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agent-memory/tts-data-engineer/: MEMORY.md  bilingual-merge.md
.claude/agents/: tts-data-engineer.md  ui-pyqt-reviewer.md
.claude/skills/run-and-test/: SKILL.md
.claude/skills/test-ocr-pipeline/: SKILL.md
src/capture_region_reader/: __init__.py  __main__.py  app.py  debug_service.py  hotkey_manager.py  main_window.py  ocr_worker.py  region_selector.py  settings.py  subtitle_binarizer.py  subtitle_cleaner.py  subtitle_detector.py  text_cleaner.py  text_differ.py  text_isolator.py  tts_worker.py
tests/: debug_merge.py  news-video.md  test_bilingual.py  test_dualpass_rus.py  test_isolator_vs_raw.py  test_tesseract_bilingual.py
