[project]
name = "capture-region-reader"
version = "0.1.0"
description = "Screen region OCR with real-time text-to-speech reader"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.7",
    "pytesseract>=0.3.13",
    "mss>=9.0",
    "pynput>=1.7.7",
    "Pillow>=10.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.8",
    "edge-tts>=7.2.7",
    "torch>=2.0",
    "scipy>=1.12",
    "omegaconf>=2.3",
    "coqui-tts[codec]>=0.24",
    "torchaudio>=2.0",
    "transformers>=4.33,<5",
]

[project.scripts]
capture-region-reader = "capture_region_reader.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capture_region_reader"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
